modules/web-ui/deployment/cern-k8s/mosquitto/mosquitto-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
spec:
  type: ClusterIP
  ports:
  - port: 9001
    protocol: TCP
    name: websockets
  selector:
    app: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
  replicas: 1
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:1.6
          ports:
            - containerPort: 9001
              protocol: TCP
          volumeMounts:
            - mountPath: /mosquitto/config
              name: mosquitto-config-volume
      volumes:
        - name: mosquitto-config-volume
          configMap:
            name: mosquitto-config
